--- a/DoAnMon/Views/ClassRooms/_MessagePartial.cshtml
+++ b/DoAnMon/Views/ClassRooms/_MessagePartial.cshtml
@@ -123,7 +123,7 @@
             @if (alignmentClass == "other-user")
             {
                 <div class="avatar" style="width: 50px; height: 50px; background-color: #ddd; border-radius: 50%; text-align: center; line-height: 40px; margin-left: 10px; font-size: 18px; font-weight: bold; color: #555;">
-                    @if (string.IsNullOrEmpty(chattinguser.UrlAvt))
+                    @if (string.IsNullOrEmpty(chattinguser.UrlAvt) || chattinguser.UrlAvt.Contains("avatar.jpg"))
                     {
                             <img src="/Imgs_avtUser/avatar.jpg"
                                  alt="Avatar"
